Fix dependencies and url of sync

--- a/client_flutter_symds/android/app/build.gradle
+++ b/client_flutter_symds/android/app/build.gradle
@@ -43,6 +43,18 @@ flutter {
     source = "../.."
 }
 
-dependencies { 
-    implementation("org.jumpmind.symmetric:symmetric-pro-android:3.15.0")
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
+
+dependencies {
+    // implementation name: 'symmetric-android-3.14.18'
+
+    // implementation name: 'symmetric-core-3.14.18'
+
+    // implementation name: 'symmetric-core-3.14.18'
+    
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
 }
