Fix duplicate class

--- a/client_flutter_symds/android/app/build.gradle
+++ b/client_flutter_symds/android/app/build.gradle
@@ -37,6 +37,11 @@ android {
             signingConfig = signingConfigs.debug
         }
     }
+
+    packagingOptions {
+        resources.pickFirsts.add('META-INF/license.txt')
+        resources.pickFirsts.add('META-INF/notice.txt')
+    }
 }
 
 flutter {
