--- a/client_flutter_symds/android/app/src/main/AndroidManifest.xml
+++ b/client_flutter_symds/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <application
         android:label="client_flutter_symds"
         android:name="${applicationName}"
@@ -37,9 +39,9 @@
             android:name="org.jumpmind.symmetric.android.SymmetricService" 
             android:enabled="true"
             android:exported="true"> 
-            <!-- <intent-filter> 
+            <intent-filter> 
                 <action android:name="org.jumpmind.symmetric.android.SymmetricService" /> 
-            </intent-filter>  -->
+            </intent-filter> 
         </service>
     </application>
     <!-- Required to query activities that can process text, see:
